# vision

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/zoson/vision/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg-jni.cpp  ffmpeg-jni.h  ffmpeg-live.cpp  ffmpeg-rtmp.cpp  ffmpeg-rtmp.h  main.cpp  net.cpp
app/src/main/cpp/include/net/: net.hpp
app/src/main/java/com/zoson/cycle/enity/: Enities.java  Enity.java
app/src/main/java/com/zoson/cycle/ffmpeg/: Description.java  FFmpegService.java  Format.java  Frame.java  Protocol.java
app/src/main/java/com/zoson/cycle/service/: CameraService.java  FFmpegService.java  RTSPService.java
app/src/main/java/com/zoson/cycle/service/db/: DataBaseOperator.java  SharedPreference.java
app/src/main/java/com/zoson/cycle/service/http/: HttpRequest.java  Request.java  (+1 more)
app/src/main/java/com/zoson/cycle/utils/: BitmapUtils.java  FileUtils.java  ThreadPool.java
app/src/main/java/com/zoson/vision/activity/: LaunchActivity.java  MainActivity.java  VisionActivity.java  testActivity.java
app/src/main/java/com/zoson/vision/domain/: VisionManager.java  VisionSession.java
app/src/main/jniLibs/arm64-v8a/: libavformat.so.57  libpostproc.so.54  libswscale.so.4
app/src/main/jniLibs/armeabi/: libavdevice.so.57  libavfilter.so.6  libavformat.so.57  libavutil.so.55  libpostproc.so.54  libswresample.so.2  libswscale.so.4
app/src/main/jniLibs/armeabi-v7a/: libavdevice.so.57  libavfilter.so.6  libavformat.so.57  libavutil.so.55  libpostproc.so.54  libswresample.so.2  libswscale.so.4
app/src/main/jniLibs/x86/: libavdevice.so.57  libavutil.so.55  libpostproc.so.54
app/src/main/jniLibs/x86_64/: libavdevice.so.57  libavfilter.so.6  libavformat.so.57  libavutil.so.55  libswresample.so.2  libswscale.so.4
app/src/main/res/layout/: activity_launch.xml  activity_main.xml  mainlayout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zoson/vision/: ExampleUnitTest.java
